--- a/Fylum.Migrations.Web/Components/Layout/NavMenu.razor
+++ b/Fylum.Migrations.Web/Components/Layout/NavMenu.razor
@@ -5,6 +5,8 @@
     
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
 
+    <MudNavLink Href="migrations" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Dataset">Migrations</MudNavLink>
+
 </MudNavMenu>
 
 
