--- a/Fylum.Migrations.Web/Components/Layout/NavMenu.razor
+++ b/Fylum.Migrations.Web/Components/Layout/NavMenu.razor
@@ -1,10 +1,5 @@
 ﻿
-<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
-    
-    <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
-
+<MudNavMenu Rounded="true" Margin="Margin.Dense" Color="Color.Primary" Class="pa-2">
     <MudNavLink Href="migrations" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Dataset">Migrations</MudNavLink>
 
 </MudNavMenu>
