use extracted materialtheming package instead of m2twinforms

--- a/Fylum.Migrations.Web/Components/Layout/MainLayout.razor
+++ b/Fylum.Migrations.Web/Components/Layout/MainLayout.razor
@@ -1,6 +1,4 @@
-﻿@using M2TWinForms.Themes
-@using M2TWinForms.Themes.MaterialDesign
-@using MudBlazor.Utilities
+﻿@using MudBlazor.Utilities
 @inject IThemeProvider M2TThemeProvider
 @inherits LayoutComponentBase
 
