--- a/Fylum.Web/Components/_Imports.razor
+++ b/Fylum.Web/Components/_Imports.razor
@@ -6,6 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MudBlazor
+@using MudBlazor.Services
 @using Fylum.Web
 @using Fylum.Web.Components
-@using Fylum.Web.Components.Layout
