add clients in same scope as blazor user session so the token storage can use ProtectedLocalStorage

--- a/Fylum.Web/Components/Pages/Folders.razor
+++ b/Fylum.Web/Components/Pages/Folders.razor
@@ -1,8 +1,10 @@
 ﻿@page "/folders"
 @page "/folders/{Id:guid}"
+@using Fylum.Client
 @using Fylum.Client.Folders
 @using Fylum.Folders.Api.Shared
-@using MudBlazor
+@using Fylum.Web.Services
+@inject IBrowserTokenStorage TokenStorage
 @inject IFolderClient FolderClient
 @inject ISnackbar Snackbar
 @inject NavigationManager Navigation
@@ -61,6 +63,8 @@ else
     [Parameter]
     public Guid? Id { get; set; }
 
+    private bool _isComponentReady = false; // Flag für den Status der Komponente
+
     private bool _isLoading = true;
     private GetFolderResponse? _currentFolder;
     private List<GetFolderResponse> _childFolders = new();
@@ -70,12 +74,26 @@ else
 
     protected override async Task OnParametersSetAsync()
     {
-        await LoadFolderData();
+        if (_isComponentReady)
+            await LoadFolderData();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await TokenStorage.LoadFromStorageAsync();
+            _isComponentReady = true;
+            await LoadFolderData();
+
+            StateHasChanged();
+        }
     }
 
     private async Task LoadFolderData()
     {
-        _isLoading = true;
+        _isLoading = true; 
+        StateHasChanged();
         try
         {
             if (Id.HasValue)
