--- a/Fylum.Migrations.Web/Components/Pages/Migrations.razor
+++ b/Fylum.Migrations.Web/Components/Pages/Migrations.razor
@@ -45,6 +45,7 @@ else
                 {
                     <MudButton Disabled="@_currentlyPerformingMigration" 
                         Variant="Variant.Filled" Color="Color.Primary" 
+                        Class="m3-primary-container"
                         OnClick="() => PerformUpToMigration(context.MigrationId)">
                         Perform up to
                     </MudButton>
