--- a/Fylum.Migrations.Web/Components/_Imports.razor
+++ b/Fylum.Migrations.Web/Components/_Imports.razor
@@ -8,5 +8,7 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using MudBlazor.Services
+@using MudBlazor.Utilities
 @using Fylum.Migrations.Web
-@using Fylum.Migrations.Web.Components
+@using Fylum.Migrations.Web.Components 
+@using Fylum.Web.MaterialTheming
